<resources>
    <string name="app_name">ToDoApp</string>
    <string name="create_an_account_in">Create An Account in</string>
    <string name="app_name_todo_manager">ToDo Manager</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_to">Welcome To</string>
    <string name="log_in">Log In</string>
    <string name="google">G</string>
    <string name="facebook">f</string>
    <string name="registrationSucceded">Registration Succeeded</string>
    <string name="failuar">\"Registration failed: \"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="language">Language:</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="sign_out">Sign Out</string>
    <string name="share_the_application">Share the application</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="do_more">DO MORE</string>
    <string name="organize_your_thoughts">Organize Your Thoughts</string>
    <string name="powered_by_mh_team">Powered By: MH team</string>
    <string name="add_new_task">ADD NEW TASK</string>
    <string name="pick_date">Pick Date</string>
    <string name="add_task">ADD TASK</string>
    <string name="save">Save</string>
    <string name="edit_task">EDIT TASK</string>
    <array name="tabs">
        <item>ALL</item>
        <item>PENDDING</item>
        <item>DONE</item>

    </array>

</resources>